code cleaning 2